<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.example.fishingapp.viewModels.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <EditText
            android:id="@+id/textUser"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUser" />

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/userLabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="?attr/colorOnSurface" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword"/>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/passwordLabel"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUser" />

        <ImageButton
            android:id="@+id/showPasswordButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="-48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorOnBackground"
            android:src="@android:drawable/ic_menu_view"
            android:text="Info"
            app:layout_constraintStart_toEndOf="@+id/textPassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
            app:tint="?attr/colorOnSurface"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="145dp"
            android:layout_height="44dp"
            android:layout_marginTop="48dp"
            android:text="@string/register"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            tools:layout_editor_absoluteX="133dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>